objects/Mil_App_Log__c/Mil_App_Log__c.object-meta.xml
<CustomObject>
    <description>Custom Application log</description>
    <label>Mil_App_Log</label>
    <nameField>
        <displayFormat>AppLog-{0}</displayFormat>
        <label>Mil_App_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mil_App_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>