objects/Mil_App_Log__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <description>Application Type</description>
    <label>App Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>