objects/Mil_App_Log__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>