objects/Mil_App_Log__c/fields/Log_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Log Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>