objects/Mil_App_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>App_Type__c</columns>
    <columns>Log_Level__c</columns>
    <columns>Log_Time__c</columns>
    <columns>Message__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>